@@ -259,6 +259,14 @@ class DestinationTest(unittest.TestCase):
         p = beets.library._sanitize_path(u':', posixpath)
         self.assertEqual(p, u'-')
     
+    def test_sanitize_windows_uses_very_short_names(self):
+        p = beets.library._sanitize_path('X'*300 + '/' + 'Y'*200, ntpath)
+        self.assertLessEqual(len(p), 100)
+
+    def test_sanitize_unix_uses_longer_names(self):
+        p = beets.library._sanitize_path('X'*300 + '/' + 'Y'*200, posixpath)
+        self.assertGreaterEqual(len(p), 100)
+
     def test_path_with_format(self):
         self.lib.path_format = '$artist/$album ($format)'
         p = self.lib.destination(self.i)
