@@ -20,6 +20,7 @@
   completely wrong association of track names to files. The order
   applied was always just alphabetical by filename, which is frequently
   but not always what you want.
+* Filenames are now truncated to 30 characters on Windows.
 * Fix crash in lastid when the artist name is not available.
 * Fixed a spurious crash when LANG or a related environment variable is
   set to an invalid value (such as 'UTF-8' on some installations of Mac
